# laketrace

./: .gitignore  ANALYSIS_SUMMARY.md  GAP_ANALYSIS_LOGURU.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  INDEX.md  LICENSE  LOGURU_REUSE_QUICK_REF.md  PHASE_1_COMPLETE.md  PHASE_2_3_COMPLETE.md  README.md  RELEASE_NOTES_v1.1.0.md  VENDORED_IMPLEMENTATION.md  pyproject.toml  requirements.txt  test_security.py  test_vendored_logger.py
.github/workflows/: check-and-generate-docs.yml  check-and-test.yml  publish-to-pypi.yml  security.yml
docs/: ARCHITECTURE.md  SECURITY.md  TESTING.md  architecture-diagram.excalidraw
examples/: example_5_unified_spark_logging.py  example_databricks_job.py  example_fabric_notebook.py  example_fabric_spark_job.py  example_multi_stage_pipeline.py  example_security_logging.py  fabric_notebook_safe_usage.ipynb  fabric_spark_example.ipynb
laketrace/: __init__.py  compression.py  config.py  core_logger.py  init.py  logger.py  retention.py  rotation.py  runtime.py  security.py  spark_integration.py  string_parsers.py
scripts/: build_pypi.ps1  release.ps1
tests/: UNIFIED_TEST_RUNNER.md  UNIFIED_TEST_RUNNER_CREATED.md  run_all_tests.py  run_phase1_tests.py  run_tests.py  run_workloads.py  test_core_direct.py  test_diagnostic.py  test_get_logger_debug.py  test_handler_debug.py  test_hang_debug.py  test_logger_init_debug.py  test_minimal.py  test_phase1_compression.py  test_phase1_enqueue.py  test_phase1_formatters_filters.py  test_phase1_handler_ids.py  test_phase1_retention.py  test_phase1_rotation.py  test_phase2_advanced.py  test_phase3_performance.py  test_runtime_debug.py  test_stdout_only.py  test_suite.py  test_vendored_logger.py
tests/workloads/basic/: core_logger_direct.py  (+3 more)
(+9 files in other folders)
