[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laketrace"
version = "1.0.2"
description = "Production-grade logging for Spark data platforms (Fabric & Databricks)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "LakeTrace Contributors" }
]
keywords = [
    "logging",
    "spark",
    "databricks",
    "fabric",
    "microsoft-fabric",
    "data-engineering",
    "lakehouse",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/laketrace-logger"
Documentation = "https://github.com/yourusername/laketrace-logger#readme"
Repository = "https://github.com/yourusername/laketrace-logger"
Issues = "https://github.com/yourusername/laketrace-logger/issues"

[tool.setuptools]
packages = ["laketrace"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "1.0.2"

[tool.mypy]
python_version = "1.0.2"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
